<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ViewDrinkFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewDrinksFragment">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="24dp"
        android:text="@string/textDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEditDrinkNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/textNone"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/textEditDrinkSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textNone"
        app:layout_constraintStart_toStartOf="@+id/textEditDrinkNum"
        app:layout_constraintTop_toBottomOf="@+id/textEditDrinkNum" />

    <TextView
        android:id="@+id/textEditDrinkAlco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textNone"
        app:layout_constraintStart_toStartOf="@+id/textEditDrinkSize"
        app:layout_constraintTop_toBottomOf="@+id/textEditDrinkSize" />

    <TextView
        android:id="@+id/textEditDrinkDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textNone"
        app:layout_constraintStart_toStartOf="@+id/textEditDrinkAlco"
        app:layout_constraintTop_toBottomOf="@+id/textEditDrinkAlco" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textAdded"
        app:layout_constraintBottom_toBottomOf="@+id/textEditDrinkDate"
        app:layout_constraintEnd_toStartOf="@+id/textEditDrinkDate" />

    <Button
        android:id="@+id/buttonViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/buttonClose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonPrevDrink"
        android:layout_width="74dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTrashDrink"
        app:layout_constraintEnd_toStartOf="@+id/buttonTrashDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_previous" />

    <ImageButton
        android:id="@+id/buttonTrashDrink"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/buttonViewClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/ic_trash" />

    <ImageButton
        android:id="@+id/buttonNextDrink"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTrashDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTrashDrink"
        app:srcCompat="@drawable/ic_next" />

</androidx.constraintlayout.widget.ConstraintLayout>